<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CashFlow</string>
    <string name="add_expense_button">Add Expense</string>
    <string name="add_income_button">Add Income</string>
    <string name="balance_string">Balance</string>
    <string name="balance_value">1234</string>
    <string name="currency">HUF</string>
    <string name="menu_settings">Settings</string>
    <string name="submit_button">Submit</string>
    <string name="list_expenses_button">List Expenses</string>
    <string name="list_incomes_button">List Incomes</string>
    <string name="title_activity_add_income">Add Income</string>
    <string name="date_label">Date: </string>
    <string name="amount_label">Amount:</string>
    <string name="notes_label">Notes:</string>
    <string name="amount_hint">0.00</string>
    <string name="action_settings">Settings</string>
    <string name="main_no_items">No statement to diplay</string>
    <string name="edit_button">Edit button</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_list_expenses">List Expenses</string>
    <string name="title_activity_list_incomes">List Incomes</string>
    <string name="title_activity_list_recurringincomes">Recurring Incomes</string>
    <string name="title_activity_edit_incomes">Edit Income</string>
    <string name="title_activity_edit_expenses">Edit Expense</string>
    <string name="title_activity_create_category">Create Category</string>
    <string name="title_activity_add_bill">Add bill</string>
    <string name="title_activity_list_bill">List bill</string>
    <string name="button_create_categories">Create Categories</string>
    <string name="hint_category_name">Category name</string>
    <string name="empty_category">You should write in something.</string>
    <string name="label_category">Category:</string>
    <string name="recurring_label">Is recurring</string>
    <string name="recurring_hint">If this income is recurring than check the checkbox.</string>
    <string name="recurring_start">Start date:</string>
    <string name="recurring_interval">Repeat income:</string>
    <string name="repeat_prompt">Choose an interval</string>
    <string name="deadline_label">Deadline:</string>
    <string name="add_bill_label">Add Bill</string>
    <string name="database_error">"Something hapend with the database. Please try again!"</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_actions">Add</string>
    <string name="recurring_bill_label">Recurring interval</string>
    <string name="income_string">Income</string>
    <string name="expense_string">Expense</string>
    <string name="pay_bill">pay</string>
    <string name="title_activity_edit_bill">Edit bill</string>

</resources>